# lapack_test

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  LapackTestMainWindow.cpp  LapackTestMainWindow.h  lapack_test_main_window.ui  main.cpp
src/: CMakeLists.txt  MatrixObject.cpp  MatrixObject.h
src/math/: LMatrix.cpp  LMatrix.h
src/ui/: MatrixDelegate.cpp  MatrixDelegate.h  MatrixModel.cpp  MatrixModel.h  MatrixWidget.cpp  MatrixWidget.h  matrix_widget.ui
